New in 0.0.5:

* Compatibility: Administrate relies on the `&-suffix` feature of SASS,
  which was [released in 3.3.0], as well as using `&` in SassScript,
  which was [released in 3.4.0]. We've declared an explicit dependency
  on `sass ~> 3.4`.

[released in 3.3.0]: http://sass-lang.com/documentation/file.SASS_CHANGELOG.html#330_7_march_2014
[released in 3.4.0]: http://sass-lang.com/documentation/file.SASS_CHANGELOG.html#340_18_august_2014

New in 0.0.4:

* Improvement: Use [selectize.js](http://brianreavis.github.io/selectize.js/)
  to improve has_many form field interaction.
* Interface: remove the "Show" link from tables - it was redundant because
  clicking on the row itself took the user to the same place.

New in 0.0.3:

* Improvement: the `administrate:install` generator now runs
  the dashboard generator for each resource it finds.
* Compatibility: Relax the required version of Neat down to ~> 1.1.0

New in 0.0.2:

* Bug Fix: Re-package the gem from the correct directory to include generators.

New in 0.0.1:

* First release!